--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /*  your css code here. If applicable */
 table{
-	background color:yellow;	
+	background color:yellow;
+	border:1px solid black;
 }
 table,th,tr,td{
 	border:1px solid black;
