--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 table{
-	background color:'rgb(255, 255, 0)';
+	background color:"rgb(255,255,0)";
 	border:1px solid black;
 }
 table,th,tr,td{
